--- a/css/style.css
+++ b/css/style.css
@@ -31,14 +31,14 @@ header {
   width: 40%;
   padding: 20px;
   margin: 0 auto;
-  border: 2px solid rgb(12, 127, 180);
+  border: 3px solid rgb(12, 127, 180);
   border-radius: 15px;
   margin-bottom: 100px;
 
 }
 
 header h1 {
-  color: rgb(115, 240, 182);
+  color: rgb(115, 221, 240);
   font-size: 30pt;
 }
 
@@ -76,6 +76,111 @@ header div {
   height: 100px;
   width: 100px;
 }
+
+#btnsWrapper {
+  margin-bottom: 100px;
+}
+
+#btnsWrapper button {
+  padding: 20px;
+  width: 200px;
+  height: 50px;
+  font-size: 24pt;
+  border-radius: 20px;
+  color: #0d4258;
+  background-color: rgb(131, 194, 223);
+  border-color: #0d4258;
+}
+
+.modal {
+  /* display: none; */
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  background: #fff;
+  width: 30%;
+  height: 60%;
+  overflow: auto;
+  border-radius: 20px;
+  background-color: rgb(150, 219, 219);;
+}
+
+.modalHeader {
+  font-size: 15pt;
+  text-align: center;
+  border: 1px solid black;
+  color: #0b4b66;
+}
+
+.modalHeader p {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.modal p {
+  text-align: right;
+  margin: 10px 10px;
+}
+
+.modal p button {
+  width: 30px;
+  height: 30px;
+  background-color: red;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+}
+
+
+.modalContent {
+  margin: 0 auto;
+  padding: 20px;
+  width: 80%;
+  border: 1px solid black;
+  margin-top: 20px;
+}
+
+.contenitoreSlider {
+  margin: 0 auto;
+  width: 80%;
+  margin-top: 20px;
+}
+
+.contenitoreSlider input[type="range"] {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 10px;  
+  background: #ffffff;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.contenitoreSlider input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%; 
+  background: #04a3d3;
+  cursor: pointer;
+}
+
+.contenitoreSlider input[type="range"]::-moz-range-thumb  {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
+
+
+
 
 .bg {
   background: linear-gradient(
