--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ header div {
 .modalHeader {
   font-size: 15pt;
   text-align: center;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   color: #0b4b66;
 }
 
@@ -138,7 +138,7 @@ header div {
   margin: 0 auto;
   padding: 20px;
   width: 80%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin-top: 20px;
 }
 
@@ -178,7 +178,19 @@ header div {
   cursor: pointer;
 }
 
-
+#contenitoreImmagini {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 30px;
+  justify-content: center;
+}
+#contenitoreImmagini img {
+  width: 100px;
+  height: 167px;
+  margin: 10px;
+  border-radius: 8px;
+}
 
 
 
