finito impostazioni e iniziato ordinamenti

--- a/css/style.css
+++ b/css/style.css
@@ -89,11 +89,18 @@ header div {
   border-radius: 20px;
   color: #0d4258;
   background-color: rgb(131, 194, 223);
-  border-color: #0d4258;
+  border: none ;
 }
 
-.modal {
+#modalImpostazioni {
+  display: none;
+}
+
+#modalOrdinamenti {
   /* display: none; */
+}
+.modal {
+  
   position: fixed;
   z-index: 1;
   left: 0;
@@ -101,7 +108,7 @@ header div {
   margin: 0 auto;
   background: #fff;
   width: 30%;
-  height: 60%;
+  height: 65%;
   overflow: auto;
   border-radius: 20px;
   background-color: rgb(150, 219, 219);;
@@ -182,17 +189,56 @@ header div {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-top: 30px;
+  margin-top: 20px;
   justify-content: center;
 }
-#contenitoreImmagini img {
+#contenitoreImmagini div {
   width: 100px;
   height: 167px;
   margin: 10px;
   border-radius: 8px;
 }
 
+.modalContent h1 {
+  margin-top: 20px;
+}
 
+#btnGenera {
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #6dc0da;
+  font-weight: bold;
+  color: #16546e;
+  border: none;
+  font-size: 18pt;
+}
+
+.divNazioni {
+  display: inline-block;
+  /* border: 2px solid #0b4b66; */
+  margin: 5px;
+}
+
+.divNazioni img {
+  width: 65px;
+  height: 40px;
+  border-radius: 4px;
+}
+
+.divNazioni label {
+  display: block;
+  margin-top: 5px;
+}
+
+#pulisciNazioni {
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #6dc0da;
+  font-weight: bold;
+  color: #16546e;
+  border: none;
+  font-size: 12pt;
+}
 
 .bg {
   background: linear-gradient(
