--- a/css/style.css
+++ b/css/style.css
@@ -48,33 +48,14 @@ header div {
 
 #main {
   margin: 0 auto;
-  width: 70%;
-  border: 2px solid rgb(12, 127, 180);
+  width: 80%;
+  border: 4px solid rgb(12, 127, 180);
   display:flex ;
   justify-content: center;
   align-content: flex-start;
   flex-direction: row;
   flex-wrap: wrap;
-}
-
-.card{
-  width: 30%;
-  background-color: white;
-  margin: 10px;
-}
-
-.card div {
-  display: inline-block;
-  margin: 10px;
-  font-size: 20pt;
-}
-
-.card img {
-  vertical-align: middle;
-  border-radius: 50%;
-  object-fit: cover;
-  height: 100px;
-  width: 100px;
+  border-radius: 10px;
 }
 
 #btnsWrapper {
@@ -90,6 +71,7 @@ header div {
   color: #0d4258;
   background-color: rgb(131, 194, 223);
   border: none ;
+  margin: 20px;
 }
 
 #modalImpostazioni {
@@ -97,9 +79,9 @@ header div {
 }
 
 #modalOrdinamenti {
-  /* display: none; */
+  display: none; 
 }
-.modal {
+.mymodal {
   
   position: fixed;
   z-index: 1;
@@ -114,24 +96,24 @@ header div {
   background-color: rgb(150, 219, 219);;
 }
 
-.modalHeader {
+.mymodalHeader {
   font-size: 15pt;
   text-align: center;
   /* border: 1px solid black; */
   color: #0b4b66;
 }
 
-.modalHeader p {
+.mymodalHeader p {
   text-align: center;
   margin: 0 auto;
 }
 
-.modal p {
+.mymodal p {
   text-align: right;
   margin: 10px 10px;
 }
 
-.modal p button {
+.mymodal p button {
   width: 30px;
   height: 30px;
   background-color: red;
@@ -141,7 +123,7 @@ header div {
 }
 
 
-.modalContent {
+.mymodalContent {
   margin: 0 auto;
   padding: 20px;
   width: 80%;
@@ -199,7 +181,7 @@ header div {
   border-radius: 8px;
 }
 
-.modalContent h1 {
+.mymodalContent h1 {
   margin-top: 20px;
 }
 
@@ -225,12 +207,32 @@ header div {
   border-radius: 4px;
 }
 
+.divNazioni input {
+  -webkit-appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 2px;  
+  background: #ffffff;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.divNazioni input[type='checkbox']:checked {
+  width: 15px;
+  height: 15px;
+  background: #046583;
+  cursor: pointer;
+}
+
 .divNazioni label {
   display: block;
   margin-top: 5px;
 }
 
 #pulisciNazioni {
+  width: 70px;
   padding: 10px;
   border-radius: 5px;
   background-color: #6dc0da;
@@ -238,6 +240,55 @@ header div {
   color: #16546e;
   border: none;
   font-size: 12pt;
+}
+
+#btnOrdina {
+  width: 70px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #6dc0da;
+  font-weight: bold;
+  color: #16546e;
+  border: none;
+  font-size: 12pt;
+}
+
+#cmbOrdinamneti {
+  font-size: 14pt;
+  padding: 10px;
+  text-align: center;
+  margin: 20px ;
+  border-radius: 7px;
+  width: 50%;
+  text-align: center;
+}
+
+#contenitoreSelect {
+  text-align: center;
+}
+
+#contenitoreSelect input {
+
+}
+
+#contenitoreSelect input {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;  
+  background: #ffffff;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+#contenitoreSelect input[type='radio']:checked {
+  width: 15px;
+  height: 15px;
+  background: #046583;
+  cursor: pointer;
 }
 
 .bg {
