--- a/css/card.css
+++ b/css/card.css
@@ -44,13 +44,33 @@
 
 .mymodalHeaderCard img {
     border-radius: 10px;
-    
 }
 .mymodalContentCard {
+  display: grid;
   margin: 0 auto;
   padding: 20px;
   width: 80%;
-  border: 1px solid black; 
+  border: 3px solid rgb(19, 48, 145); 
   margin-top: 20px;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto;
+  row-gap: 10px;
+  border-radius: 10px;
+}
+
+.mymodalContentCard .txt {
+    height: 30px;
+    border-radius: 7px;
+    padding-left: 5px;
+    font-size: 14pt;
+    border: none;
+}
+
+.mymodalContentCard label {
+    font-size: 14pt;
+    text-align: left;
+    color: rgb(19, 48, 145);
+    font-weight: bold;
+
 }
 
