--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ header {
   border: 3px solid rgb(12, 127, 180);
   border-radius: 15px;
   margin-bottom: 100px;
-
 }
 
 header h1 {
@@ -50,7 +49,7 @@ header div {
   margin: 0 auto;
   width: 80%;
   border: 4px solid rgb(12, 127, 180);
-  display:flex ;
+  display: flex;
   justify-content: center;
   align-content: flex-start;
   flex-direction: row;
@@ -71,6 +70,7 @@ header div {
   color: #0d4258;
   background-color: rgb(131, 194, 223);
   margin: 20px;
+  border: 0px;
 }
 
 #btnsWrapper button:hover {
@@ -82,14 +82,14 @@ header div {
 }
 
 .btnChiudi:hover {
-   cursor: pointer;
+  cursor: pointer;
 }
 
 #modalOrdinamenti {
-  display: none; 
+  display: none;
 }
 .mymodal {
-  
+  text-align: center;
   position: fixed;
   z-index: 1;
   left: 0;
@@ -101,6 +101,12 @@ header div {
   overflow: auto;
   border-radius: 20px;
   background-color: rgb(150, 219, 219);
+  overflow-y: scroll;
+  scrollbar-width: none;
+}
+
+.mymodal::-webkit-scrollbar {
+  display: none;
 }
 
 .mymodalHeader {
@@ -129,7 +135,6 @@ header div {
   color: #fff;
 }
 
-
 .mymodalContent {
   margin: 0 auto;
   padding: 20px;
@@ -148,12 +153,12 @@ header div {
   -webkit-appearance: none;
   width: 100%;
   height: 15px;
-  border-radius: 10px;  
+  border-radius: 10px;
   background: #ffffff;
   outline: none;
   opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
 .contenitoreSlider input[type="range"]::-webkit-slider-thumb {
@@ -161,16 +166,16 @@ header div {
   appearance: none;
   width: 25px;
   height: 25px;
-  border-radius: 50%; 
+  border-radius: 50%;
   background: #04a3d3;
   cursor: pointer;
 }
 
-.contenitoreSlider input[type="range"]::-moz-range-thumb  {
+.contenitoreSlider input[type="range"]::-moz-range-thumb {
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: #04AA6D;
+  background: #04aa6d;
   cursor: pointer;
 }
 
@@ -186,10 +191,20 @@ header div {
   height: 167px;
   margin: 10px;
   border-radius: 8px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#contenitoreImmagini div:hover {
+  cursor: pointer;
 }
 
 .mymodalContent h1 {
   margin-top: 20px;
+}
+
+.selectedGender {
+  box-shadow: 0 0 12px 4px #61a4beff;
+  border: solid 3px rgb(34, 108, 138);
 }
 
 #btnGenera {
@@ -201,6 +216,10 @@ header div {
   border: none;
   font-size: 18pt;
   margin: 10px;
+}
+
+#btnGenera:hover {
+  cursor: pointer;
 }
 
 .divNazioni {
@@ -219,15 +238,15 @@ header div {
   -webkit-appearance: none;
   width: 15px;
   height: 15px;
-  border-radius: 2px;  
+  border-radius: 2px;
   background: #ffffff;
   outline: none;
   opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
-.divNazioni input[type='checkbox']:checked {
+.divNazioni input[type="checkbox"]:checked {
   width: 15px;
   height: 15px;
   background: #046583;
@@ -265,7 +284,7 @@ header div {
   font-size: 14pt;
   padding: 10px;
   text-align: center;
-  margin: 20px ;
+  margin: 20px;
   border-radius: 7px;
   width: 50%;
   text-align: center;
@@ -276,7 +295,6 @@ header div {
 }
 
 #contenitoreSelect input {
-
 }
 
 #contenitoreSelect input {
@@ -284,15 +302,15 @@ header div {
   appearance: none;
   width: 15px;
   height: 15px;
-  border-radius: 15px;  
+  border-radius: 15px;
   background: #ffffff;
   outline: none;
   opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
-#contenitoreSelect input[type='radio']:checked {
+#contenitoreSelect input[type="radio"]:checked {
   width: 15px;
   height: 15px;
   background: #046583;
@@ -300,18 +318,19 @@ header div {
 }
 
 .bg {
-  background: linear-gradient(
-    120deg,
-    #0a2835,
-    #203a43,
-    #254655
-  );
+  background: linear-gradient(120deg, #0a2835, #203a43, #254655);
   background-size: 400% 400%;
   animation: gradientMove 5s ease infinite;
 }
 
 @keyframes gradientMove {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
