--- a/css/card.css
+++ b/css/card.css
@@ -1,10 +1,11 @@
 .card {
   display: inline-block;
-  width: 45%;
+  width: 400px;
   font-size: 18pt;
-  height: auto;
+  height: 230px;
   border-radius: 10px;
   margin: 10px;
+  /* background-color: rgb(70, 247, 247); */
   box-sizing: border-box;
   padding: 10px;
   font-size: 18pt;
@@ -12,9 +13,13 @@
   color: rgb(3, 32, 94);
 }
 
+.card:hover {
+    cursor: pointer;
+}
+
 .card img {
   vertical-align: middle;
-  width: 30%;
+  width: auto;
   height: auto;
   border-radius: 50%;
   margin: 20px;
@@ -31,6 +36,7 @@
 
 #modalCard {
   display: none;
+  height: 55%;
 }
 
 .maschio {
@@ -66,7 +72,8 @@
   height: 30px;
   border-radius: 7px;
   padding-left: 5px;
-  font-size: 14pt;
+  font-size: 12pt;
+  font-weight: bold;
   border: none;
 }
 
@@ -76,3 +83,5 @@
   color: rgb(19, 48, 145);
   font-weight: bold;
 }
+
+
